--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ obj/
 out/
 ppdd-solution.zip
 debug.log
+staging/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # msbuild output directories
